
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef scalar_t__ u8 ;
struct sk_buff {scalar_t__ len; scalar_t__ cb; } ;
struct r8192_priv {TYPE_2__* ieee80211; } ;
struct net_device {int dummy; } ;
typedef int dev ;
struct TYPE_6__ {scalar_t__ queue_index; int RATRIndex; int bTxDisableRateFallBack; int bTxUseDriverAssingedRate; int bTxEnableFwCalcDur; } ;
typedef TYPE_3__ cb_desc ;
struct TYPE_4__ {int tx_packets; int tx_bytes; } ;
struct TYPE_5__ {TYPE_1__ stats; scalar_t__ tx_headroom; } ;


 scalar_t__ MAX_DEV_ADDR_SIZE ;
 scalar_t__ MGNT_QUEUE ;
 scalar_t__ TXCMD_QUEUE ;
 int assert (int) ;
 scalar_t__ ieee80211_priv (struct net_device*) ;
 int kfree_skb (struct sk_buff*) ;
 int memcpy (unsigned char*,struct net_device**,int) ;
 int rtl8192_tx (struct net_device*,struct sk_buff*) ;
 int skb_push (struct sk_buff*,scalar_t__) ;

__attribute__((used)) static void rtl8192_hard_data_xmit(struct sk_buff *skb, struct net_device *dev, int rate)
{
 struct r8192_priv *priv = (struct r8192_priv *)ieee80211_priv(dev);
 int ret;

 cb_desc *tcb_desc = (cb_desc *)(skb->cb + MAX_DEV_ADDR_SIZE);
 u8 queue_index = tcb_desc->queue_index;

 assert(queue_index != TXCMD_QUEUE);



        memcpy((unsigned char *)(skb->cb),&dev,sizeof(dev));






 skb_push(skb, priv->ieee80211->tx_headroom);
 ret = rtl8192_tx(dev, skb);
 if(ret != 0) {
  kfree_skb(skb);
 };


 if(queue_index!=MGNT_QUEUE) {
 priv->ieee80211->stats.tx_bytes+=(skb->len - priv->ieee80211->tx_headroom);
 priv->ieee80211->stats.tx_packets++;
 }




 return;
}
